<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView_mapIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_mapmode" />

        <TextView
            android:id="@+id/textView_mapSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="2dp"
            android:text="Map Settings"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_selectMapFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_view_button"
        android:paddingBottom="20dp"
        android:paddingLeft="12dp"
        android:paddingRight="5dp"
        android:paddingTop="20dp"
        android:text="@string/button_selectMapFile"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFDD0044" />

    <ImageView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="6dp"
        android:paddingBottom="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_dark" />

    <LinearLayout
        android:id="@+id/linearLayout_sampleType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_selectScanType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="0dp"
            android:paddingLeft="12dp"
            android:paddingRight="5dp"
            android:paddingTop="16dp"
            android:text="@string/prefScanType"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView_selectScanTypeValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingLeft="12dp"
            android:paddingRight="5dp"
            android:paddingTop="0dp"
            android:text="@string/prefScanTypeValue"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <ImageView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="6dp"
        android:paddingBottom="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_dark" />

    <LinearLayout
        android:id="@+id/linearLayout_sampleAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_selectScanAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="0dp"
            android:paddingLeft="12dp"
            android:paddingRight="5dp"
            android:paddingTop="16dp"
            android:text="@string/prefScanAmount"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView_selectScanAmountValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="15dp"
            android:paddingLeft="12dp"
            android:paddingRight="5dp"
            android:paddingTop="0dp"
            android:text="@string/prefScanAmountValue"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</LinearLayout>